# graphql-parser

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
benches/: graphql.rs
src/: common.rs  error.rs  format.rs  helpers.rs  lib.rs  position.rs  query.rs  query_error.rs  query_format.rs  query_grammar.rs  tokenizer.rs  visitor.rs
src/query/: ast.rs  format.rs  grammar.rs  minify.rs  mod.rs  query_visitor.rs  transformer.rs
src/schema/: ast.rs  format.rs  grammar.rs  mod.rs  schema_visitor.rs
src/validation/: mod.rs  type_info.rs
tests/: query_errors.rs  query_roundtrips.rs  roundtrips.rs  schema_roundtrips.rs  serde.rs
tests/queries/: kitchen-sink_canonical.graphql  var_directive.graphql
tests/query_errors/: bad_args.txt  invalid_curly_brace.txt
tests/schemas/: directive.graphql  directive_descriptions.graphql  directive_descriptions_canonical.graphql  directive_variable_definition.graphql  extend_interface.graphql  extend_object.graphql  implements_interface.graphql  repeatable.graphql
