[package]
name = "graphql-parser"
description = """
    A parser, AST and serializer for graphql query language and scheme
    definition language (sometimes called IDL).
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["graphql", "parser"]
categories = ["parser-implementations", "command-line-interface"]
homepage = "https://github.com/graphql-rust/graphql-parser"
documentation = "https://docs.rs/graphql-parser"
version = "0.4.1"
authors = ["Paul Colomiets <paul@colomiets.name>"]
edition = "2018"

[dependencies]
combine = "4.6.6"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "0.5.0"
